Fix mobile edit form to show selected bookmarks